added adaptive in project page

--- a/_posts/2022-07-03-isup.md
+++ b/_posts/2022-07-03-isup.md
@@ -4,20 +4,20 @@ permalink: projects/isup/
 id: 1
 title: Информационная система управления проектами
 description: К нам обратилась крупная компания с проектом, который они не могли реализовать уже несколько лет. Пробовали с другими подрядчиками, но до финала так и не дошли. А готовые решения ИСУП не подходили, потому, что у большинства крупных компаний свои особенности
-prev_image: "/assets/img/projects/prev/sber-qr-prev.png"
-prev_position: center
-prev_background: "#367CF4"
+prev_image: "/assets/img/projects/prev/isup.png"
+prev_position: right
+prev_background: "#F3CA46"
 spheres: "business-processes"
 technologies: "web"
 ---
 
-## Информационная система управления проектами
-
+# Информационная система управления проектами
 
 К нам обратилась крупная компания с проектом, который они не могли реализовать уже несколько лет. Пробовали с другими подрядчиками, но до финала так и не дошли. А готовые решения ИСУП не подходили, потому, что у большинства крупных компаний свои особенности…
 
 <figure>
     <img src="{{ site.baseurl }}/assets/img/projects/isup/cover1.png" alt="cover1"/>
+    <figcaption></figcaption>
 </figure>
 
 ## Цели и задачи
