add new logic to filters, remove line in filters

--- a/_posts/2022-07-02-sber-qr.md
+++ b/_posts/2022-07-02-sber-qr.md
@@ -7,8 +7,8 @@ description: Чтобы научить людей пользоваться QR-к
 prev_image: "/assets/img/projects/prev/sber-qr-prev.png"
 prev_position: center
 prev_background: "#367CF4"
-spheres: "business-processes"
-technologies: "hybrid"
+spheres: ['business-processes']
+technologies: ['android', 'iOS']
 ---
 
 # Sber QR
