--- a/_posts/2022-07-03-isup.md
+++ b/_posts/2022-07-03-isup.md
@@ -4,11 +4,11 @@ permalink: projects/isup/
 id: 1
 title: Информационная система управления проектами
 description: К нам обратилась крупная компания с проектом, который они не могли реализовать уже несколько лет. Пробовали с другими подрядчиками, но до финала так и не дошли. А готовые решения ИСУП не подходили, потому, что у большинства крупных компаний свои особенности
-prev_image: "/assets/img/projects/prev/isup.png"
+prev_image: '/assets/img/projects/prev/isup.png'
 prev_position: right
-prev_background: "#F3CA46"
-spheres: "business-processes"
-technologies: "web"
+prev_background: '#F3CA46'
+spheres: ['business-processes', 'project-management']
+technologies: ['web', 'hybrid']
 ---
 
 # Информационная система управления проектами
