fix logic filters

--- a/_posts/2022-07-03-isup.md
+++ b/_posts/2022-07-03-isup.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-permalink: projects/isup/
+permalink: project/isup/
 id: 1
 title: Информационная система управления проектами
 description: К нам обратилась крупная компания с проектом, который они не могли реализовать уже несколько лет. Пробовали с другими подрядчиками, но до финала так и не дошли. А готовые решения ИСУП не подходили, потому, что у большинства крупных компаний свои особенности
