--- a/_posts/2022-07-02-sber-qr.md
+++ b/_posts/2022-07-02-sber-qr.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-permalink: projects/sber-qr/
+permalink: project/sber-qr/
 id: 2
 title: Sber QR
 description: Чтобы научить людей пользоваться QR-кодами, Сбербанк придумал геймифицированный продукт по типу «Ingress» и «Pokemon Go». С его помощью можно взаимодействовать с реальными
@@ -12,64 +12,3 @@ technologies: ['android', 'iOS']
 ---
 
 # Sber QR
-
-Сервис для учета рабочего времени сотрудников медицинских организаций США
-
-<img src="{{ site.baseurl }}/assets/img/projects/sber-qr/cover1.png" alt="cover" />
-
-#### Цель и задачи
-
-## Цифровизация системы здравоохранения
-
-1. Разработать приложение для учёта рабочего времени медицинского персонала
-
-2. Предусмотреть экспорт данных в таблицы, чтобы уменьшить трудозатраты бухгалтеров
-
-3. Реализовать инструмент для получения обратной связи от клиентов, чтобы повысить их лояльность
-
-#### Решение
-
-## Как мы выстроили бизнес-логику в системе здравоохранения США
-
-### Систематизация времени и услуг
-
-<p class="project-content-item-half">Наше решение — система, фиксирующая время работы медицинского персонала и виды услуг, оказываемых пациенту. Полученные данные сверяются с недельным планом, по нескольким параметрам ведётся систематизация и анализ.</p>
-
-<img src="{{ site.baseurl }}/assets/img/projects/sber-qr/cover2.png" alt="cover" />
-
-### Доступность сервиса
-
-<p class="project-content-item-half">Учитывая бизнес-логику, доступ к информации предоставляется как медицинской организации, так и страховщику, с которым заключён договор у пациента. Предложенная нами система учёта времени по задаче заказчика доступна в браузере и в мобильных приложениях на устройствах iOS и Android.</p>
-
-<img src="{{ site.baseurl }}/assets/img/projects/sber-qr/cover3.png" alt="cover" />
-
-#### Время на разработку
-
-## Столько времени мы занимались проектом
-
-{% include project/DevelopTime.html
-    reliseTime='18 месяцев'
-    developmentTime='15 месяцев'
-%}
-
-#### Отзыв
-
-## Говорят о нашей проделанной работе
-
-<div class="project-content-video">
-    <div class="project-content-video__left">
-        <video height="100%" width="100%" controls autoplay></video>
-    </div>
-    <div class="project-content-video__right">
-        <p class="project-content-video__right-title">Имя фамилия</p>
-        <p class="project-content-video__right-descr">
-            Здесь будет написан краткий текст отзыва.<br>
-            Здесь будет написан краткий текст отзыва.<br>
-            Здесь будет написан краткий текст отзыва.<br>
-            Здесь будет написан краткий текст отзыва.<br>
-            Здесь будет написан краткий текст отзыва.<br>
-            Здесь будет написан краткий текст отзыва.<br>
-            Здесь будет написан краткий текст отзыва.
-        </p>
-    </div>
-</div>
