--- a/_posts/2022-07-03-isup.md
+++ b/_posts/2022-07-03-isup.md
@@ -3,7 +3,7 @@ layout: project
 permalink: project/isup/
 id: 1
 title: Информационная система управления проектами
-description: К нам обратилась крупная компания с проектом, который они не могли реализовать уже несколько лет. Пробовали с другими подрядчиками, но до финала так и не дошли. А готовые решения ИСУП не подходили, потому, что у большинства крупных компаний свои особенности
+description: Разработали систему управления проектами с визуализацией и обновляемой информацией по более 30-ти проектам. С этим проектом не справились 2 компании, к которым до этого обращался заказчик.
 prev_image: '/assets/img/projects/prev/isup.png'
 prev_position: right
 prev_background: '#F3CA46'
