added isup, sber cases

--- a/_posts/2022-07-03-isup.md
+++ b/_posts/2022-07-03-isup.md
@@ -3,34 +3,45 @@ layout: project
 permalink: project/isup/
 id: 1
 title: Информационная система управления проектами
-description: Разработали систему управления проектами с визуализацией и обновляемой информацией по более 30-ти проектам. С этим проектом не справились 2 компании, к которым до этого обращался заказчик.
+description: Разработали систему управления проектами с визуализацией и обновляемой информацией более чем по 30 проектам
 prev_image: '/assets/img/projects/prev/isup.png'
 prev_position: right
 prev_background: '#F3CA46'
 spheres: ['business-processes', 'project-management']
-technologies: ['web', 'hybrid']
+technologies: ['web', 'desktop', 'hybrid']
 ---
 
-# Информационная система управления проектами
+## Информационная система управления проектами
 
-К нам обратилась крупная компания с проектом, который они не могли реализовать уже несколько лет. Пробовали с другими подрядчиками, но до финала так и не дошли. А готовые решения ИСУП не подходили, потому, что у большинства крупных компаний свои особенности…
+Наглядное предоставление полной информации по проектам для принятия управленческих решений
+
+К нам обратилась крупная компания с проектом, который они не могли реализовать уже несколько лет.
+Пробовали с другими подрядчиками, но до финала так и не дошли.
+А готовые решения по автоматизации управления предприятиям не подходили,
+так как у каждой компании выстроен индивидуальный рабочий процесс.
+
+Структура, система бухучета, сфера работы, и даже страна локации --- мы изучили всё это, прописали бизнес-процессы, провели интервью с заинтересованными лицами и предложили свое дизайнерское и техническое решение.
+
 
 <figure>
     <img src="{{ site.baseurl }}/assets/img/projects/isup/cover1.png" alt="cover1"/>
-    <figcaption></figcaption>
 </figure>
 
 ## Цели и задачи
 
-1. Сделать наглядный и функциональный (использовать timeline) график проектов
-2. Подключить сотрудников попроектно, чтобы они могли ставить и выполнять задачи, добавлять информацию, документы по проектам
-3. Собрать все данные о проектах в одном месте в режиме реального времени, чтобы ТОПы компании могли быстро принимать инвестиционные решения по проектам и владели всей полнотой информации
+1. Создать систему, которая позволит управлять >30 проектами внутри компании.
+2. Сделать наглядный и функциональный график проектов с таймлайном.
+3. Подключить сотрудников так, чтобы они могли ставить и выполнять задачи, добавлять информацию и документы по своим проектам.
+4. Создать функционал по сбору всех данные в одном месте в режиме реального времени.
+Руководство компании должно быстро принимать инвестиционные решения по проектам. Для этого им надо владеть всей полнотой информации.
 
 ## Решение
 
 ### Модель SaaS
 
-За основу формата системы была взята модель SaaS, в её основе — наглядная диаграмма по всем проектам. По каждому из них видны плановые и фактические сроки. Пользователь может изучить каждый проект более подробно, «проваливаясь» в него. График реализации…
+Модель SaaS --- это наглядная диаграмма по всем проектам. По каждому из них видны плановые и фактические сроки. Пользователь может изучить каждый проект более подробно, «проваливаясь» в него.
+
+График реализации проекта выполнен при помощи доработанной диаграммы Ганта. При наведении курсора пользователь может увидеть существующие задачи, плановые и проблемные выделены цветом.
 
 <figure>
     <img src="{{ site.baseurl }}/assets/img/projects/isup/cover2.png" alt="cover2"/>
@@ -39,16 +50,27 @@ technologies: ['web', 'hybrid']
 
 ### Документооборот
 
-Внутри каждого проекта прогружается вся необходимая информация — файлы, договора, задачи, КП, изображения, ссылки. Руководитель видит названия документов и дату их создания. Импорт документов производится из DocsVision, есть фильтрация. Так же, к каждому проекту подключено своего рода «общее хранилище файлов» - где можно создавать папки, выкладывать информацию для обмена.
+Внутри каждого проекта находится вся необходимая информация: файлы, договоры, задачи, КП, изображения и ссылки. Руководитель видит названия документов и дату их создания. Импорт документов производится из DocsVision, есть фильтрация. Также, к каждому проекту подключено своего рода «общее хранилище файлов», где можно создавать папки и выкладывать информацию для обмена.
 
 <figure>
     <img src="{{ site.baseurl }}/assets/img/projects/isup/cover3.png" alt="cover3"/>
     <figcaption>Просмотр файлов и папок</figcaption>
 </figure>
 
+Внутри есть и технико-экономические показатели --- ключевые параметры, которые были присвоены проекту на старте.
+Ведется сравнение плановых и фактических цифр.
+
+### История изменений
+
+Мы создали «ленту новостей», с помощью которой можно видеть историю изменений.
+Пользователь понимает, кто из участников и когда производил какие-либо действия.
+Все выглядит максимально наглядно, есть фильтрация.
+
+**ЗДЕСЬ НАДО ДОБАВИТЬ КАРТИНКУ С ЛЕНТОЙ НОВОСТЕЙ**
+
 ### Инструмент управления
 
-Разработанная нами ИСУП планируется использовать и как инструмент управления. Есть возможность создавать задачи, как для себя, так и делегировать их. Каждый участник может посмотреть свои задачи на неделю (по всем проектам) и поставить по ним статус — в работе, выполнена и т.д. Есть поиск по задачам, фильтрация по срочности, постановщику задачи, названию.
+Разработанная нами система планируется использоваться и как инструмент управления. Есть возможность создавать задачи, как для себя, так и делегировать их. Каждый участник может посмотреть свои задачи на неделю (по всем проектам) и поставить по ним статус – в работе, выполнена и прочее. Есть поиск по задачам, фильтрация по срочности, постановщику задачи, названию.
 
 <figure>
     <img src="{{ site.baseurl }}/assets/img/projects/isup/cover4.png" alt="cover3"/>
@@ -65,16 +87,16 @@ technologies: ['web', 'hybrid']
 
 ### Контактная книжка по проекту
 
-Контактная книжка по проекту — задействованные сотрудники и привлечённые контрагенты
+С помощью неё можно увидеть всех задействованных сотрудников и привлеченных контрагентов в конкретном проекте.
 
 <figure>
     <img src="{{ site.baseurl }}/assets/img/projects/isup/cover5.png" alt="cover5"/>
-    <figcaption>Просмотр карточки участника</figcaption>
+    <figcaption>Контактная книжка</figcaption>
 </figure>
 
 ### Уведомления
 
-Настраиваемые уведомления по новым, выполненным и просроченным задачам
+Настраиваемые уведомления по новым, выполненным и просроченным задачам.
 
 <figure>
     <img src="{{ site.baseurl }}/assets/img/projects/isup/cover6.png" alt="cover5"/>
@@ -83,15 +105,15 @@ technologies: ['web', 'hybrid']
 
 ### Данные с видеокамер
 
-В режиме реального времени можно наблюдать за ходом работ
+Есть возможность в реальном времени наблюдать ход работ по объектам строительства и проектам.
 
 <figure>
     <img src="{{ site.baseurl }}/assets/img/projects/isup/cover7.png" alt="cover5"/>
-    <figcaption>Какое-то пояснение к картинке</figcaption>
+    <figcaption>Данные с видеокамер</figcaption>
 </figure>
 
-## Отзыв клиента
+### Отчеты по договорам и по проектам
 
-### Имя должность
+Есть возможность формировать отчёты по датам, срокам, и так далее. Данные интегрируются из Power BI, Superset.
 
-Разработанная нами ИСУП планируется использовать и как инструмент управления. Есть возможность создавать задачи, как для себя, так и делегировать их. Каждый участник может посмотреть свои задачи на неделю (по всем проектам) и поставить по ним ста
+**НУЖНА КАРТИНКА ДЛЯ ОТЧЁТОВ**
