add handle validate error from server, fix header

--- a/_posts/2022-07-03-isup.md
+++ b/_posts/2022-07-03-isup.md
@@ -11,7 +11,7 @@ spheres: ['business-processes', 'project-management']
 technologies: ['web', 'desktop', 'hybrid']
 ---
   
-## Информационная система управления проектами
+# Информационная система управления проектами
 
 Наглядное предоставление полной информации по проектам для принятия управленческих решений
 
