cases images updated

--- a/_posts/2022-07-03-isup.md
+++ b/_posts/2022-07-03-isup.md
@@ -64,14 +64,17 @@ technologies: ['web']
 Пользователь понимает, кто из участников и когда производил какие-либо действия.
 Все выглядит максимально наглядно, есть фильтрация.
 
-**ЗДЕСЬ НАДО ДОБАВИТЬ КАРТИНКУ С ЛЕНТОЙ НОВОСТЕЙ**
+<figure>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover8.png" alt="cover8"/>
+    <figcaption>Лента новостей</figcaption>
+</figure>
 
 ### Инструмент управления
 
 Разработанная нами система планируется использоваться и как инструмент управления. Есть возможность создавать задачи, как для себя, так и делегировать их. Каждый участник может посмотреть свои задачи на неделю (по всем проектам) и поставить по ним статус – в работе, выполнена и прочее. Есть поиск по задачам, фильтрация по срочности, постановщику задачи, названию.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover4.png" alt="cover3"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover4.png" alt="cover4"/>
     <figcaption>Просмотр задач</figcaption>
 </figure>
 
@@ -97,7 +100,7 @@ technologies: ['web']
 Настраиваемые уведомления по новым, выполненным и просроченным задачам.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover6.png" alt="cover5"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover6.png" alt="cover6"/>
     <figcaption>Боковое меню с уведомлениями</figcaption>
 </figure>
 
@@ -106,7 +109,7 @@ technologies: ['web']
 Есть возможность в реальном времени наблюдать ход работ по объектам строительства и проектам.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover7.png" alt="cover5"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover7.png" alt="cover7"/>
     <figcaption>Данные с видеокамер</figcaption>
 </figure>
 
@@ -114,4 +117,7 @@ technologies: ['web']
 
 Есть возможность формировать отчёты по датам, срокам, и так далее. Данные интегрируются из Power BI, Superset.
 
-**НУЖНА КАРТИНКА ДЛЯ ОТЧЁТОВ**
+<figure>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover9.png" alt="cover9"/>
+    <figcaption>Отчёт по договорам</figcaption>
+</figure>
