change images and names img in isup

--- a/_posts/2022-07-03-isup.md
+++ b/_posts/2022-07-03-isup.md
@@ -22,7 +22,7 @@ technologies: ['web']
 
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover1.png" alt="cover1"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover.png" alt="cover"/>
 </figure>
 
 ## Цели и задачи
@@ -42,7 +42,7 @@ technologies: ['web']
 График реализации проекта выполнен при помощи доработанной диаграммы Ганта. При наведении курсора пользователь может увидеть существующие задачи, плановые и проблемные выделены цветом.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover2.png" alt="cover2"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/saas.png" alt="saas"/>
     <figcaption>Просмотр связей между задачами</figcaption>
 </figure>
 
@@ -51,7 +51,7 @@ technologies: ['web']
 Внутри каждого проекта находится вся необходимая информация: файлы, договоры, задачи, КП, изображения и ссылки. Руководитель видит названия документов и дату их создания. Импорт документов производится из DocsVision, есть фильтрация. Также, к каждому проекту подключено своего рода «общее хранилище файлов», где можно создавать папки и выкладывать информацию для обмена.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover3.png" alt="cover3"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/document.png" alt="document"/>
     <figcaption>Просмотр файлов и папок</figcaption>
 </figure>
 
@@ -65,7 +65,7 @@ technologies: ['web']
 Все выглядит максимально наглядно, есть фильтрация.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover8.png" alt="cover8"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/history.png" alt="history"/>
     <figcaption>Лента новостей</figcaption>
 </figure>
 
@@ -74,7 +74,7 @@ technologies: ['web']
 Разработанная нами система планируется использоваться и как инструмент управления. Есть возможность создавать задачи, как для себя, так и делегировать их. Каждый участник может посмотреть свои задачи на неделю (по всем проектам) и поставить по ним статус – в работе, выполнена и прочее. Есть поиск по задачам, фильтрация по срочности, постановщику задачи, названию.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover4.png" alt="cover4"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/management.png" alt="management"/>
     <figcaption>Просмотр задач</figcaption>
 </figure>
 
@@ -91,7 +91,7 @@ technologies: ['web']
 С помощью неё можно увидеть всех задействованных сотрудников и привлеченных контрагентов в конкретном проекте.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover5.png" alt="cover5"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/contact.png" alt="contact"/>
     <figcaption>Контактная книжка</figcaption>
 </figure>
 
@@ -100,7 +100,7 @@ technologies: ['web']
 Настраиваемые уведомления по новым, выполненным и просроченным задачам.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover6.png" alt="cover6"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/notification.png" alt="notification"/>
     <figcaption>Боковое меню с уведомлениями</figcaption>
 </figure>
 
@@ -109,7 +109,7 @@ technologies: ['web']
 Есть возможность в реальном времени наблюдать ход работ по объектам строительства и проектам.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover7.png" alt="cover7"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/videocamera.png" alt="videocamera"/>
     <figcaption>Данные с видеокамер</figcaption>
 </figure>
 
@@ -118,6 +118,6 @@ technologies: ['web']
 Есть возможность формировать отчёты по датам, срокам, и так далее. Данные интегрируются из Power BI, Superset.
 
 <figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/isup/cover9.png" alt="cover9"/>
+    <img src="{{ site.baseurl }}/assets/img/projects/isup/report.png" alt="report"/>
     <figcaption>Отчёт по договорам</figcaption>
 </figure>
