add other adaptives

--- a/_posts/2022-07-03-isup.md
+++ b/_posts/2022-07-03-isup.md
@@ -1,7 +1,9 @@
 ---
 layout: project
 permalink: project/isup/
-title: Информационная система управления проектами
+title: 
+    ru: Информационная система управления проектами
+    en: англ
 description: Разработали систему управления проектами с визуализацией и обновляемой информацией более чем по 30 проектам
 prev_image: '/assets/img/projects/prev/isup-prev.png'
 prev_position: right
