--- a/_posts/2022-06-26-sber-qr.md
+++ b/_posts/2022-06-26-sber-qr.md
@@ -1,31 +1,20 @@
 ---
 layout: project
 permalink: project/sber-qr/
-title: Геолокационная игра «Sber QR»
-description: Разработка геолокационной игры по типу «Ingress» и «Pokemon Go» для продвижения новой услуги от «Сбербанка» — оплата по QR кодам
-prev_image: "/assets/img/projects/prev/sber-qr-prev.png"
-prev_position: center
+postTitle: 
+    ru: Геолокационная игра «Sber QR»
+    en: англ
+postDescription: 
+    ru: Разработка геолокационной игры по типу «Ingress» и «Pokemon Go» для продвижения новой услуги от «Сбербанка» — оплата по QR кодам
+    en: англ
+prevImage: "/assets/img/projects/prev/sber-qr-prev.png"
+prevPosition: center
 spheres: ['marketing', 'geolocation', 'game']
 technologies: ['android', 'iOS']
 ---
 
-# Геолокационная игра «Sber QR»
-
-Играйте и изучайте новые возможности для оплаты.
-
-<figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/sber-qr/sber-qr-1-overview.png" alt="Sber QR Обзорная картинка"/>
-</figure>
-
-## Цели и задачи
-1. Рассказать о новой возможности оплаты при помощи QR-кодов.
-2. Через игру научить людей совершать платежи с помощью QR-кодов.
-3. Увеличить популярность безналичных платежей.
-
-## Решение
-
-Виртуальная игра соединяется с реальностью при помощи геолокации и использовании настоящих объектов от компаний-партнеров Сбербанка. Похожий подход был реализован в играх типа «Ingress» и «Pokemon Go».
-
-Игрок видит компании, участвующие в игре, на карте рядом с собой. Он может получить всю информацию об организации, купить ее виртуальные акции или арендовать площадь.
-
-С акций можно получить дивиденды и вложить их в дело. Чем больше опыта у игрока, тем выше уровень в игре и финансовые возможности.
+{% if site.lang == "ru" %}
+{%- include articles/sber-qr.ru.md -%}
+{% else %}
+{%- include articles/sber-qr.en.md -%}
+{% endif %}
