--- a/_posts/2022-07-01-lukoil.md
+++ b/_posts/2022-07-01-lukoil.md
@@ -1,49 +1,20 @@
 ---
 layout: project
 permalink: project/lukoil/
-title: «LLK Портал» для Лукойл
-description: Усовершенствование существующего мобильного приложения «LLK Портал» для экспедиторов и авторизованных покупателей
-prev_image: "/assets/img/projects/prev/lukoil-prev.png"
-prev_position: center
+postTitle: 
+    ru: «LLK Портал» для Лукойл
+    en: англ
+postDescription: 
+    ru: Усовершенствование существующего мобильного приложения «LLK Портал» для экспедиторов и авторизованных покупателей
+    en: англ
+prevImage: "/assets/img/projects/prev/lukoil-prev.png"
+prevPosition: center
 spheres: ['logistics']
 technologies: ['android', 'iOS']
 ---
 
-# «LLK Портал» для Лукойл
-
-К нам обратилась одна из крупнейших нефтедобывающих компаний России для обновления приложения предварительной записи на погрузку масел и битума.
-
-<figure>
-    <img src="{{ site.baseurl }}/assets/img/projects/lukoil/lukoil-1-overview.png" alt="Лукойл: Обзорная картинка"/>
-</figure>
-
-## Цели
-
-1. Исключить возможность перехвата конфиденциальной информации.
-2. Ускорить работу приложения.
-3. Реализовать удобный функционал по обновлению страницы.
-
-## Решение
-
-Чтобы защитить информацию от перехвата, было установлено безопасное подключение по протоколу HTTPS. В случае ошибки доступа по HTTPS, подключение проходит по протоколу HTTP. В предыдущей версии использовался только HTTP.
-
-Добавлено кэширование файлов для ускорения работы приложения. После этого экраны стали грузиться за 2--3 секунды. Ранее загрузка проходила в течение 30--40 секунд.
-
-Добавлен функционал по обновлению контента экрана при оттягивании страницы вниз. Дизайнеры улучшили базовую навигацию в приложении.
-
-## Результат
-
-В приложение реализован следующий функционал:
-
-1. Вход в приложение двумя способами: пин-код или Touch ID.
-2. Запись на погрузку:
-
-    * выбор продукции из списка;
-    * выбор места, откуда будет отправлена продукция;
-    * выбор даты в календаре;
-    * выбор времени, к которому нужно доставить;
-    * подтверждение записи.
-
-3. Просмотр истории предыдущих заказов: дата, состав и статус заказа, номер заказа, данные водителя.
-
-Приложения стало удобнее, функциональнее и главное --- стало безопасным с точки зрения защиты информации.
+{% if site.lang == "ru" %}
+{%- include articles/lukoil.ru.md -%}
+{% else %}
+{%- include articles/lukoil.en.md -%}
+{% endif %}
