add en texts in main and any posts

--- a/_posts/2022-06-30-aspyre.md
+++ b/_posts/2022-06-30-aspyre.md
@@ -6,7 +6,7 @@ postTitle:
     en: Aspyre
 postDescription: 
     ru: Многофункциональная web-платформа для менеджмента, финансового контроля, организации и ведения проектов
-    en: англ
+    en: Multifunctional web platform for management, financial control, project organizing, and project management.
 prevImage: "/assets/img/projects/prev/aspyre-prev.png"
 prevPosition: right
 spheres: ['medical', 'management', 'project-management']
