--- a/_posts/2022-07-01-lukoil.md
+++ b/_posts/2022-07-01-lukoil.md
@@ -3,10 +3,10 @@ layout: project
 permalink: project/lukoil/
 postTitle: 
     ru: «LLK Портал» для Лукойл
-    en: англ
+    en: «LLK Portal» for Lukoil oil company
 postDescription: 
     ru: Усовершенствование существующего мобильного приложения «LLK Портал» для экспедиторов и авторизованных покупателей
-    en: англ
+    en: Improvement of the existing mobile application “LLK Portal” for freight forwarders and authorized buyers
 prevImage: "/assets/img/projects/prev/lukoil-prev.png"
 prevPosition: center
 spheres: ['logistics']
