--- a/_posts/2022-07-03-isup.md
+++ b/_posts/2022-07-03-isup.md
@@ -4,10 +4,10 @@ permalink: project/isup/
 
 postTitle:
     ru: Информационная система управления проектами
-    en: англ
+    en: Project Management Information System
 postDescription:
     ru: Разработали систему управления проектами с визуализацией и обновляемой информацией более чем по 30 проектам
-    en: англ
+    en: We have developed the project management system with visualization and regular information updates for over 30 projects
 
 prevImage: "/assets/img/projects/prev/isup-prev.png"
 prevPosition: right
