add en version other posts

--- a/_posts/2022-06-01-wriggle.md
+++ b/_posts/2022-06-01-wriggle.md
@@ -3,10 +3,10 @@ layout: project
 permalink: project/wriggle/
 postTitle: 
     ru: Wriggle
-    en: англ
+    en: Wriggle
 postDescription: 
     ru: Маркетплейс лучших предложений кафе и доставок еды в городе Бристоль
-    en: англ
+    en: Marketplace of the best cafe offers and food deliveries in Bristol
 prevImage: "/assets/img/projects/prev/wriggle-prev.png"
 prevPosition: center
 spheres: ['marketing', 'geolocation']
