--- a/_posts/2022-06-26-sber-qr.md
+++ b/_posts/2022-06-26-sber-qr.md
@@ -3,10 +3,10 @@ layout: project
 permalink: project/sber-qr/
 postTitle: 
     ru: Геолокационная игра «Sber QR»
-    en: англ
+    en: Sber QR
 postDescription: 
     ru: Разработка геолокационной игры по типу «Ingress» и «Pokemon Go» для продвижения новой услуги от «Сбербанка» — оплата по QR кодам
-    en: англ
+    en: Development of geolocation games like "Ingress" and "Pokemon Go" to promote a new service from Sberbank — payment by QR codes
 prevImage: "/assets/img/projects/prev/sber-qr-prev.png"
 prevPosition: center
 spheres: ['marketing', 'geolocation', 'game']
