--- a/_posts/2022-06-28-dr-julian.md
+++ b/_posts/2022-06-28-dr-julian.md
@@ -6,7 +6,7 @@ postTitle:
     en: Dr. Julian
 postDescription: 
     ru: Сервис быстрой связи между пациентом и доктором. Приложение позволяет связаться пациенту со специалистом по видеосвязи из любой точки мира
-    en: англ
+    en: Fast communication service between the patient and the doctor. The application allows the patient to contact a specialist by video from anywhere in the world
 prevImage: "/assets/img/projects/prev/dr-julian-prev.png"
 prevPosition: center
 spheres: ['medical', 'business-processes']
