--- a/_posts/2022-06-29-prosto.md
+++ b/_posts/2022-06-29-prosto.md
@@ -3,10 +3,10 @@ layout: project
 permalink: project/prosto/
 postTitle: 
     ru: "Просто: медитация и сон"
-    en: англ
+    en: "Prosto: meditation and sleep"
 postDescription: 
     ru: Приложение для медитации, ежедневной практики и очистки сознания
-    en: англ
+    en: An application for meditation, daily practice and purification of consciousness
 prevImage: '/assets/img/projects/prev/prosto-prev.png'
 prevPosition: center
 spheres: ['medical']
