add translate all posts

--- a/_posts/2022-06-01-wriggle.md
+++ b/_posts/2022-06-01-wriggle.md
@@ -6,7 +6,7 @@ postTitle:
     en: Wriggle
 postDescription: 
     ru: Маркетплейс лучших предложений кафе и доставок еды в городе Бристоль
-    en: Marketplace of the best cafe offers and food deliveries in Bristol
+    en: A marketplace of the best cafes and food deliveries in Bristol.
 prevImage: "/assets/img/projects/prev/wriggle-prev.png"
 prevPosition: center
 spheres: ['marketing', 'geolocation']
