--- a/_posts/2022-06-29-traxi.md
+++ b/_posts/2022-06-29-traxi.md
@@ -3,10 +3,10 @@ layout: project
 permalink: project/traxi/
 postTitle: 
     ru: Traxi Trailer
-    en: Traxi Trailer
+    en: Traxi Trailers
 postDescription: 
     ru: Создали приложение по аренде прицепов и трейлеров для немецкой компании. Приложение помогает людям сэкономить на перевозке крупногабаритных вещей
-    en: We have created an application for renting trailers and trailers for a German company. The app helps people save money on the transportation of bulky items
+    en: We created an application to rent various trailers for a German company. The app helps people save money on transporting bulky items 
 prevImage: "/assets/img/projects/prev/traxi-prev.png"
 prevPosition: center
 spheres: ['logistics', 'geolocation']
